log

Sat 16 Mar 2024 08:21:30 PM UTC: 
 exercises.c | 41 ++++++++++++++++++++++++++++++++++++++---
 1 file changed, 38 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
e8fe30f
Sat 16 Mar 2024 08:21:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
a957cfe
Sat 16 Mar 2024 08:22:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
94d8b7b
Sat 16 Mar 2024 08:38:29 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:8: error: ‘result’ redeclared as different kind of symbol
   73 |   int *result = int*(malloc)((size1 + size2) * sizeof(int));
      |        ^~~~~~
exercises.c:72:73: note: previous definition of ‘result’ with type ‘int *’
   72 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,int result[]) {
      |                                                                     ~~~~^~~~~~~~
exercises.c:73:17: error: expected expression before ‘int’
   73 |   int *result = int*(malloc)((size1 + size2) * sizeof(int));
      |                 ^~~
exercises.c:73:8: error: unused variable ‘result’ [-Werror=unused-variable]
   73 |   int *result = int*(malloc)((size1 + size2) * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
755d288
Sat 16 Mar 2024 08:38:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:7: error: ‘result’ redeclared as different kind of symbol
   73 |   int result = int*(malloc)((size1 + size2) * sizeof(int));
      |       ^~~~~~
exercises.c:72:73: note: previous definition of ‘result’ with type ‘int *’
   72 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,int result[]) {
      |                                                                     ~~~~^~~~~~~~
exercises.c:73:16: error: expected expression before ‘int’
   73 |   int result = int*(malloc)((size1 + size2) * sizeof(int));
      |                ^~~
exercises.c:73:7: error: unused variable ‘result’ [-Werror=unused-variable]
   73 |   int result = int*(malloc)((size1 + size2) * sizeof(int));
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ccef16
Sat 16 Mar 2024 08:39:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:7: error: ‘result’ redeclared as different kind of symbol
   73 |   int result = (int)*malloc((size1 + size2) * sizeof(int));
      |       ^~~~~~
exercises.c:72:73: note: previous definition of ‘result’ with type ‘int *’
   72 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,int result[]) {
      |                                                                     ~~~~^~~~~~~~
exercises.c:73:21: error: dereferencing ‘void *’ pointer [-Werror]
   73 |   int result = (int)*malloc((size1 + size2) * sizeof(int));
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:73:16: error: invalid use of void expression
   73 |   int result = (int)*malloc((size1 + size2) * sizeof(int));
      |                ^
exercises.c:73:7: error: unused variable ‘result’ [-Werror=unused-variable]
   73 |   int result = (int)*malloc((size1 + size2) * sizeof(int));
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4971d4
Sat 16 Mar 2024 08:40:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:17: error: dereferencing ‘void *’ pointer [-Werror]
   73 |   result = (int)*malloc((size1 + size2) * sizeof(int));
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:73:12: error: invalid use of void expression
   73 |   result = (int)*malloc((size1 + size2) * sizeof(int));
      |            ^
cc1: all warnings being treated as errors
Compilation failed
ef8d4fc
Sat 16 Mar 2024 08:41:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:50: error: expected expression before ‘)’ token
   73 |   result = (int)*malloc((size1 + size2) * sizeof());
      |                                                  ^
Compilation failed
11f278e
Sat 16 Mar 2024 08:41:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:73:49: error: expected expression before ‘;’ token
   73 |   result = (int)*malloc((size1 + size2) * sizeof;
      |                                                 ^
exercises.c:73:50: error: expected ‘;’ before ‘}’ token
   73 |   result = (int)*malloc((size1 + size2) * sizeof;
      |                                                  ^
      |                                                  ;
   74 |                        }
      |                        ~                          
Compilation failed
aa26fa3
Sat 16 Mar 2024 08:48:56 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
200d0ff
